--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <b>Projeto 01 - Piloto</b>
               </td>
                <td align="center">
-                   <a href= "../piloto/home/templates/cadweb.html" target="_blank"><b>Acessar</b></a>
+                   <a href= "https://piloto-neon.vercel.app/" target="_blank"><b>Acessar</b></a>
                </td>
             </tr>
             <tr>
