--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
               <td>
-                <b>Projeto 02 - Aguardando... </b>
+                <b>Projeto 02 - CadWeb </b>
               </td>
                <td align="center">
                    <a href="02" target="_blank"><b>Acessar</b></a>
