--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <b>Projeto 02 - CadWeb </b>
               </td>
                <td align="center">
-                   <a href="cadweb-kappa.vercel.app" target="_blank"><b>Acessar</b></a>
+                   <a href="https://cadweb-kappa.vercel.app" target="_blank"><b>Acessar</b></a>
                </td>
             </tr>
             <tr>
